find terms by id instead of names